hphp/hack/test/typecheck/reactive/rx_append1.php
<?hh

function a(Vector<int> $a)[]: void {
  $a[] = 1;
}
